--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "chart.js": "^4.4.1",
     "react-chartjs-2": "^5.2.0",
     "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.0.3"
+    "@tsparticles/slim": "^3.0.3",
+    "three": "^0.160.0",
+    "@react-three/fiber": "^8.15.12",
+    "@react-three/drei": "^9.96.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@types/node": "^20.10.5",
+    "@types/three": "^0.160.0",
     "typescript": "^5.3.3",
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.32",
